@@ -47,3 +47,5 @@ Version: V0.5B5 Date: Sat Feb 25 18:49:43 2006 +++++++++++++++++++++++++++++++
   create modules.
 + Create a loader module (without 'lib' prefix ) for each shared library (with 'lib' prefix)
 + The dirty hack to create symlinks during installation has been removed.
++ set default tabwidth in editor to 4 char, can be changed in user settings
++ block comment/uncomment implemented
